--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <h1>Ejemplo GIT</h1>
+    <h2>Esto es para el primer commit</h2>
+    <p><span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis alias dicta similique unde saepe culpa, odit dolorum eius esse et deleniti recusandae architecto in sunt ipsum nisi minus sapiente quaerat?</span><span>Tenetur beatae sint quas ducimus saepe, ut esse, dolor at tempora veritatis sed laboriosam id inventore modi voluptates? Dignissimos nobis neque sunt. Consectetur harum magnam error asperiores necessitatibus magni ex!</span><span>Tenetur molestiae quisquam eaque delectus excepturi ut facere, alias, dolore dolorum dolorem ducimus repellat omnis vitae. Amet reprehenderit quibusdam fuga, placeat obcaecati odit dicta eaque voluptatibus, atque, voluptas dolorum? Quaerat?</span></p>
     
 </body>
 </html>
