--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <h1>Ejemplo GIT</h1>
     <h2>Esto es para el primer commit</h2>
     <p><span>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quis alias dicta similique unde saepe culpa, odit dolorum eius esse et deleniti recusandae architecto in sunt ipsum nisi minus sapiente quaerat?</span><span>Tenetur beatae sint quas ducimus saepe, ut esse, dolor at tempora veritatis sed laboriosam id inventore modi voluptates? Dignissimos nobis neque sunt. Consectetur harum magnam error asperiores necessitatibus magni ex!</span><span>Tenetur molestiae quisquam eaque delectus excepturi ut facere, alias, dolore dolorum dolorem ducimus repellat omnis vitae. Amet reprehenderit quibusdam fuga, placeat obcaecati odit dicta eaque voluptatibus, atque, voluptas dolorum? Quaerat?</span></p>
+    <h2>Esto es para el segundo commit</h2>
+    <p><span>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Animi, totam beatae ad fugiat ipsam exercitationem doloribus cum neque labore dolore porro assumenda necessitatibus nam, ex nesciunt rerum reiciendis repudiandae numquam!</span><span>Sequi dolore nulla illum alias veniam cupiditate adipisci. Ad voluptatum molestiae numquam assumenda sit architecto perferendis deleniti optio, rem voluptatibus aliquid qui hic voluptas facere iure illo tenetur laboriosam voluptates.</span><span>Quas incidunt id cupiditate perferendis error sit, adipisci veniam, dignissimos laudantium nisi, obcaecati sunt dolorum dolorem deleniti unde? Cum recusandae corrupti sapiente voluptas nihil blanditiis labore accusamus ratione ab dicta?</span></p>
     
 </body>
 </html>
