--- a/formulario.html
+++ b/formulario.html
@@ -19,8 +19,37 @@
         <label for="password">Contraseña</label>
         <input type="password" name="password" id="password">
         <br>
+        <label for="fnacimiento">Fecha Nacimiento</label>
+        <input type="date" name="fnacimiento" id="fnacimiento">
+        <br>
+        <select name="pais" required id="pais">
+            <option value="">[Seleccione una opción]</option>
+            <option value="1">Chile</option>
+            <option value="2">Perú</option>
+            <option value="3">Colombia</option>
+            <option value="4">España</option>
+            <option value="5">Italia</option>
+            <option value="6">Francia</option>
+        </select>
+        <br>
+        <select name="pais" required id="pais">
+            <option value="">[Seleccione una opción]</option>
+            <optgroup label="America">
+                <option value="1">Chile</option>
+                <option value="2">Perú</option>
+                <option value="3">Colombia</option>
+            </optgroup>
+            <optgroup label="Europa">
+                <option value="4">España</option>
+                <option value="5">Italia</option>
+                <option value="6">Francia</option>
+            </optgroup>
+            
+        </select>
+        <br>
         <input type="submit" value="Enviar">
     </form>
+    <a href="index.html">Volver</a>
 </body>
 
 </html>
